# monitoring-hub

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  .yamllint.yml  .yamllintignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.test  GEMINI.md  LICENSE  Makefile  PHASE1_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TODO_PHASE1.md  catalog.json  coverage.xml  devctl  docker-compose.yml  index.html  index_v2.html  manifest.reference.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  security-stats.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  build-pr.yml  build.yml  catalog-update.yml  deploy-docs.yml  full-build.yml  full-build.yml.disabled  regenerate-portal.yml  release-v2.yml  release.yml  scan-updates.yml  security-rebuild.yml  security.yml  update-portal.yml  update-site.yml  upload-releases.yml  upload-releases.yml.disabled
apt/: index.html  monitoring-hub.asc
apt/dists/: index.html
catalog/: alertmanager.json  apache_exporter.json  artifactory_exporter.json  bind_exporter.json  blackbox_exporter.json  collectd_exporter.json  dellhw_exporter.json  domain_exporter.json  ebpf_exporter.json  elasticsearch_exporter.json  eseries_exporter.json  exim_exporter.json  frr_exporter.json  gpfs_exporter.json  ha_cluster_exporter.json  index.json  iperf3_exporter.json  ipmi_exporter.json  json_exporter.json  keepalived_exporter.json  memcached_exporter.json  mongodb_exporter.json  mysqld_exporter.json  nats_exporter.json  nginx_exporter.json  node_exporter.json  ping_exporter.json  podman_exporter.json  process_exporter.json  prometheus.json  redis_exporter.json  slurm_exporter.json  smartctl_exporter.json  snmp_exporter.json  textfile_exporter.json
catalog/alertmanager/: deb_amd64_debian-12.json  deb_arm64_debian-12.json  docker.json  metadata.json  rpm_amd64_el10.json  rpm_amd64_el8.json  rpm_amd64_el9.json  rpm_arm64_el10.json  rpm_arm64_el8.json  (+1 more)
config/: README.md
core/: build_rpm.sh  builder.py  gen_site.py  local_test.sh  render_test.py  requirements.txt  schema.py  smart_filter.py  watcher.py
dev/: README.md  debug_portal.py
docs/: 404.html  index.html  index.md  objects.inv  sitemap.xml
el10/: index.html
el8/: index.html
el9/: index.html
requirements/: README.md  dev.txt  docs.txt  test.txt
scripts/: cleanup_docker_images.sh  cleanup_gh_pages.sh  cleanup_releases.sh  migrate_deb_targets.py
site/: 404.html  sitemap.xml
tests/: test_aggregation.py  test_artifact_schemas.py  test_site_generator.py
(+1988 files in other folders)
